chore: resolve stash pop conflicts